[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

base64 = "0.21.5"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


tokio = { version = "1", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"]}
reqwest = { version = "0.11", features = ["native-tls"]}
anyhow = "1.0.79"
futures = "0.3"
spmc = "0.3.0"