[package]
name = "f1-dash-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

dotenvy = "0.15.7"

base64 = "0.22"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5.0"

tokio = { version = "1", features = ["full", "sync"] }
tokio-util = "0.7.10"
tokio-stream = { version = "0.1.14", features = ["sync"] }

# Because of an non-responding PR of a depency of tokio-tungstenite
# tokio-tungstenite, does not yet support permessage-deflate, this is why we are using git for now
# tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-tungstenite = { git = "https://github.com/kazk/tokio-tungstenite.git", branch = "feature/permessage-deflate", features = [
  "native-tls",
  "deflate",
] }


reqwest = { version = "0.12", features = ["native-tls"] }
anyhow = "1.0.79"
futures = "0.3"
futures-util = "0.3"

sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
] }
