[package]
name = "data-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signalrs-client = "0.1.1"
zune-inflate = "0.2.54"
tokio-tungstenite = "0.18.0"
scylla = "0.8"
tokio = { version = "1.12", features = ["full"] }
futures = "0.3.6"
uuid = "1.0"
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
