[metadata]
name = dataimporter
version = 0.0.1
author = f1guy
description = Python package to import f1 live data to influxdb
keywords = python, import influxdb

[options]
packages = find:
package_dir =
    = src
python_requires= >3.7, <3.10
install_requires =
    fastf1~=2.3.0
    influxdb-client~=1.36.1
    typer~=0.7.0


[options.packages.find]
where = src
include = *
exclude =

[options.entry_points]
console_scripts =
    dataimporter = dataimporter.importer:main
