[package]
name = "live-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.7.5", features = ["http2"] }
tower-http = { version = "0.5", features = ["cors"] }

tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["native-tls"] }

sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

heck = "0.5.0"
regex = "1.10.4"

base64 = "0.22.1"
flate2 = "1.0.20"

async-stream = "0.3.5"
futures = "0.3"

dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
