[package]
name = "live-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

axum = { version = "0.7.5", features = ["http2"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tower_governor = "0.4.2"

tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
reqwest = { version = "0.12.4", features = ["native-tls"] }

sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

heck = "0.5.0"
regex = "1.10.4"

base64 = "0.22.1"
flate2 = "1.0.30"

futures = "0.3.30"

dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
