[package]
name = "api"
version = "0.3.0"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
env.workspace = true

axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
regex.workspace = true
reqwest.workspace = true

ical = "0.11"
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
cached = { version = "0.52.0", features = ["disk_store", "async"] }
