[package]
name = "generator"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.41", features = ["alloc"] }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
data.workspace = true
inquire = "0.7.5"
