[package]
name = "live"
version = "0.3.0"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "live"
path = "src/main.rs"

[dependencies]
data.workspace = true
client.workspace = true
env.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.7.5", features = ["http2"] }

tower-http = { version = "0.5.2", features = ["cors"] }
tower_governor = { version = "0.4.2", features = ["tracing"] }

tokio-tungstenite.workspace = true
reqwest = { version = "0.12.4", features = ["native-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

heck = "0.5.0"
regex = "1.10.4"

base64 = "0.22.1"
flate2 = "1.0.30"

futures = "0.3.30"

dotenvy = "0.15.7"
