[package]
name = "simulator"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
log.workspace = true

tokio.workspace = true
tracing.workspace = true
futures.workspace = true

axum = { workspace = true, features = ["ws"] }
