[package]
name = "simulator"
version = "0.2.1"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true

axum = { workspace = true, features = ["ws"] }
