[package]
name = "analytics"
version = "0.3.0"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "analytics"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
dotenvy.workspace = true

timescale.workspace = true
sqlx.workspace = true

# chrono = { version = "0.4", features = ["serde"] }
