[package]
name = "api"
version = "0.3.0"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tower-http.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true

regex.workspace = true
reqwest.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

ical = "0.11"
chrono = { version = "0.4", features = ["serde"] }
cached = { version = "0.55.1", features = ["disk_store", "async"] }
