[package]
name = "live"
version = "0.3.0"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "live"
path = "src/main.rs"

[dependencies]
data.workspace = true
client.workspace = true

anyhow.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

axum.workspace = true
tower-http.workspace = true

reqwest = { version = "0.12.4", features = ["native-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

futures.workspace = true
dotenvy.workspace = true
