[package]
name = "live"
version = "0.3.0"
edition = "2021"
publish = false
authors = ["slowlydev"]

[[bin]]
name = "live"
path = "src/main.rs"

[dependencies]
data.workspace = true
client.workspace = true

anyhow.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

axum.workspace = true
tower-http.workspace = true

reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true

futures.workspace = true
dotenvy.workspace = true

flate2.workspace = true
futures-util = "0.3.31"
